@@ -19,6 +19,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -32,15 +33,16 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.node.ArrayNode;
 import tools.jackson.databind.node.JsonNodeType;
 
+import com.vaadin.flow.internal.FileIOUtils;
 import com.vaadin.flow.internal.JacksonUtils;
+import com.vaadin.flow.internal.StringUtil;
+import com.vaadin.flow.internal.ThemeUtils;
 import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.frontend.scanner.FrontendDependenciesScanner;
 import com.vaadin.flow.theme.ThemeDefinition;
@@ -63,12 +65,7 @@ public class ThemeValidationUtil {
             FrontendDependenciesScanner frontendDependencies) {
         Map<String, JsonNode> themeJsonContents = new HashMap<>();
 
-        if (options.getJarFiles() != null) {
-            options.getJarFiles().stream().filter(File::exists)
-                    .filter(file -> !file.isDirectory())
-                    .forEach(jarFile -> getPackagedThemeJsonContents(jarFile,
-                            themeJsonContents));
-        }
+        collectJarPackagedThemes(options, themeJsonContents);
 
         Optional<String> maybeThemeName = Optional
                 .ofNullable(frontendDependencies.getThemeDefinition())
@@ -133,6 +130,27 @@ public class ThemeValidationUtil {
     }
 
     /**
+     * Collects packaged themes defined in JAR files based on the provided
+     * options and stores their JSON contents in the given map.
+     *
+     * @param options
+     *            the configuration options that include the list of JAR files
+     *            to scan for packaged theme definitions
+     * @param themeJsonContents
+     *            a map to store the JSON contents of themes found within the
+     *            JAR files, with the theme name as the key
+     */
+    static void collectJarPackagedThemes(Options options,
+            Map<String, JsonNode> themeJsonContents) {
+        if (options.getJarFiles() != null) {
+            options.getJarFiles().stream().filter(File::exists)
+                    .filter(file -> !file.isDirectory())
+                    .forEach(jarFile -> getPackagedThemeJsonContents(jarFile,
+                            themeJsonContents));
+        }
+    }
+
+    /**
      * Checks if theme has legacy Shadow DOM stylesheets in
      * {@literal <theme>/components} folder and if their content has changed.
      *
@@ -184,16 +202,23 @@ public class ThemeValidationUtil {
 
             List<String> themeComponentsCssFiles = new ArrayList<>();
             for (Path dir : themeComponentsDirs) {
-                FileUtils.listFiles(dir.toFile(), new String[] { "css" }, true)
-                        .stream()
-                        .filter(themeFile -> isFrontendResourceChangedOrMissingInBundle(
-                                hashesWithNoComponentCssMatches,
-                                frontendDirectory, themeFile))
-                        .map(f -> frontendDirectory.toPath()
-                                .relativize(f.toPath()).toString()
-                                .replaceAll("\\\\", "/"))
-                        .collect(Collectors
-                                .toCollection(() -> themeComponentsCssFiles));
+                try {
+                    FileIOUtils
+                            .listFiles(
+                                    dir.toFile(), new String[] { "css" }, true)
+                            .stream()
+                            .filter(themeFile -> isFrontendResourceChangedOrMissingInBundle(
+                                    hashesWithNoComponentCssMatches,
+                                    frontendDirectory, themeFile))
+                            .map(f -> frontendDirectory.toPath()
+                                    .relativize(f.toPath()).toString()
+                                    .replaceAll("\\\\", "/"))
+                            .collect(Collectors.toCollection(
+                                    () -> themeComponentsCssFiles));
+                } catch (IOException e) {
+                    throw new IllegalStateException(
+                            "Could not list theme CSS files in " + dir, e);
+                }
             }
             if (!themeComponentsCssFiles.isEmpty()) {
                 BundleValidationUtil.logChangedFiles(themeComponentsCssFiles,
@@ -223,7 +248,22 @@ public class ThemeValidationUtil {
                 && (moreThanOneKey || noParentEntry);
     }
 
-    private static void collectThemeJsonContentsInFrontend(Options options,
+    /**
+     * Recursively collects and stores the JSON contents of a theme and its
+     * parent themes (if applicable) from the frontend directory.
+     *
+     * @param options
+     *            the configuration options that include frontend settings, such
+     *            as the frontend directory path
+     * @param themeJsonContents
+     *            a map to store the JSON contents of themes found in the
+     *            frontend directory, using the theme name as the key
+     * @param themeName
+     *            the name of the theme currently being processed
+     * @param themeJson
+     *            the JSON representation of the theme currently being processed
+     */
+    static void collectThemeJsonContentsInFrontend(Options options,
             Map<String, JsonNode> themeJsonContents, String themeName,
             JsonNode themeJson) {
         Optional<String> parentThemeInFrontend = ThemeUtils
@@ -284,7 +324,7 @@ public class ThemeValidationUtil {
             for (String themeJson : themeJsons) {
                 byte[] byteContent = jarContentsManager
                         .getFileContents(jarFileToLookup, themeJson);
-                String content = IOUtils.toString(byteContent, "UTF-8");
+                String content = StringUtil.toUTF8String(byteContent);
                 content = content.replaceAll("\\r\\n", "\n");
 
                 Matcher matcher = THEME_PATH_PATTERN.matcher(themeJson);
@@ -392,7 +432,7 @@ public class ThemeValidationUtil {
             final String contentHash;
             try {
                 contentHash = BundleValidationUtil.calculateHash(
-                        FileUtils.readFileToString(frontendResource,
+                        Files.readString(frontendResource.toPath(),
                                 StandardCharsets.UTF_8));
             } catch (IOException e) {
                 throw new UncheckedIOException(e);
